--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   sqflite: ^2.3.2
   path: ^1.9.0
+  sqflite_common_ffi: any
 
 dev_dependencies:
   flutter_test:
